<resources>
    <string name="app_name">OurStoryApps</string>
    <string name="login_title">LOGIN</string>
    <string name="register_title">Register</string>
    <string name="logout_title">logout</string>
    <string name="add_data">add data</string>
    <string name="empty_image_warning">the image is empty!</string>
    <string name="desk_hint">masukkan deskripsi gambar</string>
    <string name="error_warning_empty">All field must filled all</string>
    <string name="enter_the_email">enter the email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="story_can_t_be_empty">Story Can\'t be empty !</string>
    <string name="login">Login</string>
    <string name="logi_image_animation">logi image animation</string>
    <string name="camera">camera</string>
    <string name="galery">galery</string>
    <string name="submit">submit</string>
    <string name="maps_icon">maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="imgpreview">imgPreview</string>
    <string name="back_button">Back Button</string>
    <string name="add_our_story">Add Our Story</string>
    <string name="detail_photo">detail photo</string>
    <string name="testingText">nice</string>
    <string name="textview">TextView</string>
    <string name="detail_story">Detail Story</string>
    <string name="register">Register</string>
    <string name="item_photo">item photo</string>
    <string name="title">Title</string>
    <string name="desc">desc</string>
</resources>